# alpmap

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/scripts/: conan-ci-setup.sh
.github/workflows/: doxygen.yml
benchmarks/: CMakeLists.txt
benchmarks/results/: analysis.py  current.csv
benchmarks/src/: common_benchmarks.cpp  map_benchmark.cpp  set_benchmark.cpp
docs/: building.md
docs/pages/: design.md  main.md
src/: alp-map.cppm  alp-set.cppm  alp.cppm
src/backends/: eve.cppm  eve.hpp  sse.cppm  sse.hpp  std_simd.cppm
src/hashing/: rapid.cppm
tests/: CMakeLists.txt
tests/src/: alpmap_test.cpp  set.cpp
